# Project3DReconstruction

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  runEvaluation.py
.github/workflows/: lint.yaml  test.yaml
Algorithm/: BundleAdjustment.py  FeatureExtraction.py  Model.py  SurfaceReconstruction.py
Algorithm/tests/: testModel.py  testSIFT.py
Data/: DataLoader.py
Data/Datasets/: README.md  todo.md
Data/ImageGenerator/: todo.md
Evaluation/: MeshCompare.py
latex/: .gitignore  EECE5639_Project_Report_McGuire_Schubert_Yeh.bib  EECE5639_Project_Report_McGuire_Schubert_Yeh.tex  README.md
latex/images/: README.md
mesh_files/coral_2/: untitled.dae
mesh_files/coral_4/: untitled.dae
mesh_files/duck/: duck5.mtl
mesh_files/rock_1/: untitled.dae
notebooks/: .gitignore  README.md  basic_reconstruction.ipynb  densePointCloud.ipynb  feature_matching.ipynb  mpl_camera_lighting.ipynb  mpl_display_coordinates.ipynb  pyrender_basic_reconstruction.ipynb  voxel_demo.ipynb
scripts/: README.md  download_datasets.py
src/project_3d_reconstruction/: __init__.py  homography.py  mpl.py  mpl_3d.py
src/project_3d_reconstruction/point_cloud_to_mesh/: point_cloud_to_mesh.py  point_cloud_to_mesh_tester.py
src/project_3d_reconstruction/rendering/: render_helper.py  render_test.py
tests/: test_homography.py  test_mpl.py
