[tool.poetry]
name = "project-3d-reconstruction"
version = "0.1.0-dev"
description = ""
authors = [
    "Nathan McGuire <mcguire.n@northeastern.edu>",
    "Brian Schubert <schubert.b@northeastern.edu>",
    "Alex Yeh <yeh.al@northeastern.edu>"
]
# TODO: reorganize into single package?
packages = [
    { from = ".", include = "Algorithm" },
    { from = ".", include = "Evalation" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.2"

[tool.poetry.group.nb.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# isort config.
[tool.isort]
profile = "black"

# mypy config.
[tool.mypy]
strict = true
